# snake21

./: CMakeLists.txt  cmakeprefix.txt  common.h  game.cpp
back/: backend.cpp  backend.h  controller.cpp  controller.h  model.cpp  model.h
front/: frontend.cpp  frontend.h
